# grov

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  release-please-config.json
.claude/: CLAUDE.md  settings.json
.claude/skills/ci-check/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
board/: TEMPLATE.md
board/0-todo/: add-print-cd-command.md  coderabbit-sane-defaults.md  init-print-cd-command.md  interactive-missing-args.md  non-grov-repo-behavior.md
board/1-refined-todos/: cd-hint-after-worktree-creation.md  coderabbit-sane-defaults.md  copy-untracked-files.md  interactive-missing-args.md  non-grov-repo-behavior.md  rm-prompt-delete-branch.md
board/3-done-specs/: 003-cd-hint-after-worktree-creation.md  004-coderabbit-sane-defaults.md
docs/: local-dev.md
scripts/: grov-dev-env.sh  grov-dev-setup-zsh.sh
specs/: 001-init-branch-prompt-and-auto-cd.md
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  paths.rs  ui.rs
src/commands/: add.rs  completions.rs  init.rs  list.rs  mod.rs  remove.rs
src/git/: executor.rs  mod.rs  repo.rs  status.rs  worktree.rs
src/tui/: confirm.rs  mod.rs  select_list.rs  step_bar.rs  terminal.rs  test_helpers.rs  text_input.rs  theme.rs
tests/: cli_add.rs  cli_init.rs  cli_list.rs  cli_remove.rs
tests/common/: mod.rs
(+11 files in other folders)
