[package]
name = "grov"
version = "0.5.1"
edition = "2024"
rust-version = "1.93"
description = "An opinionated bare-repo-only git worktree manager"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "worktree", "cli"]
repository = "https://github.com/vdsmon/grov"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
thiserror = "2.0"
console = "0.16"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
strip = true
codegen-units = 1
